# lupica

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: lupica.c
